start and stop logic, footer styling to prevent last question overflow

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,3 +5,7 @@ label {
 .start-container, html, body, .start-row, .start-col, .results-container, .results-row {
     height: 100%;
 }
+
+.footer-container {
+    height: 38px;
+}
